Removed the mat icon scaling and margin for the logout button to prevent the layout jumps

--- a/StreamingApp/ClientApp/src/app/home/home.component.scss
+++ b/StreamingApp/ClientApp/src/app/home/home.component.scss
@@ -26,8 +26,6 @@
         
             .mat-icon {
                 vertical-align: middle;
-                margin-bottom: 0.4rem;
-                transform: scale(1.1);
                 transform: scaleX(-1);
             }
         }
